--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -90,12 +90,13 @@ osx_task:
     macos_instance:
         image: catalina-xcode
     setup_script: |
-        export PATH=$GOPATH/bin:$PATH
+        # /usr/local/opt/go@1.16 will be populated by (brew install go@1.16) below
+        export PATH=$GOPATH/bin:/usr/local/opt/go@1.16/bin:$PATH
         brew update
-        brew install gpgme go go-md2man
+        brew install gpgme go@1.16 go-md2man
         go get -u golang.org/x/lint/golint
     test_script: |
-        export PATH=$GOPATH/bin:$PATH
+        export PATH=$GOPATH/bin:/usr/local/opt/go@1.16/bin:$PATH
         go version
         go env
         make validate-local test-unit-local bin/skopeo
